cve_replication/CVE-2014-0160_heartbleed/expected_error.txt
# Expected Behavior for Heartbleed Pattern in MVL

## Scenario 1: Runtime bounds check (current MVL)

The code COMPILES but the attack FAILS at runtime:

```
$ mvl run attempt.mvl
[OK] test_heartbleed_prevented passed

# The slice(3, 16387) operation on a 4-byte buffer returns Err/None
# No memory is leaked because bounds are always checked
```

## Scenario 2: With IFC labels (future MVL)

The code FAILS TO COMPILE:

```
$ mvl check attempt_ifc.mvl
error[E0401]: cannot use value with label `Untrusted` as slice index
  --> attempt_ifc.mvl:15:42
   |
15 |     let payload = record.slice(3, 3 + payload_length);
   |                                       ^^^^^^^^^^^^^^
   |                                       |
   |                                       this value has label `Untrusted`
   |                                       slice index requires label `Public` or lower
   |
   = help: use `validate_and_declassify()` to explicitly check and relabel the value
```

## Verification

The vulnerability is prevented by:

1. **Memory safety (R3):** `Bytes.slice()` is bounds-checked. Over-read is impossible.
2. **No raw pointers:** MVL has no `*p++` or `memcpy` with unchecked lengths.
3. **IFC (R4, future):** Untrusted input cannot be used as an index without explicit validation.

## Comparison

| Language | Heartbleed Possible? | Prevention Mechanism |
|----------|---------------------|---------------------|
| C | YES | None (manual bounds check required) |
| Go | NO | Slice bounds checked at runtime |
| Rust | NO | Slice bounds checked at runtime |
| MVL | NO | Slice bounds checked + IFC labels |
